change name file to index

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./font/fontawesome-free-6.4.0-web/css/all.min.css">
     <link rel="stylesheet" href="./css/base.css">
-    <link rel="stylesheet" href="./css/web.css">
+    <link rel="stylesheet" href="./css/index.css">
     <title>Document</title>
 
 </head>
@@ -20,7 +20,7 @@
         hello
     </div>
 
-    <script src="./web.js"></script>
+    <script src="./index.js"></script>
 </body>
 
 </html>
