--- a/index.html
+++ b/index.html
@@ -32,12 +32,11 @@
                 </div>
                 <!-- Thanh dieu huong -->
                 <ul class="header__inner--navigation">
-                    <a><li><home>TRANG CHU</home></li></a>
+                    <a href="http://facebook.com/lst24" target="_self"><li><home>TRANG CHU</home></li></a>
                     <a><li><forum>DIEN DAN</forum></li></a>
-                    <a><li><pro>KHUYEN MAI</pro></li></a>
                     <a><li><sv>DICH VU</sv></li></a>
-                    <a><li><try>TAP THU MIEN PHI</try></li></a>
-                    <a><li><log>DANG NHAP</log></li></a>
+                    <a><li><pro>KHUYEN MAI</pro></li></a>
+                    <a href="http://facebook.com/lst24" target="_self"><li><try>TAP THU MIEN PHI</try></li></a>
                 </ul>
             </div>
         </div>
