--- a/index.html
+++ b/index.html
@@ -57,8 +57,77 @@
 
         <!--   NGUYEN THI VAN -->
         <div class="footer">
+            <div class = "footer__grid">
+                <div class="grid__row">
+                    <div class="grid__column-4">
+                        <h3 class="footer__heading"> Thông tin </h3>
+                        <ul class="footer-list">
+                            <li class="footer-item">
+                                <a href="" class="footer-item__link">
+                                    <i class="footer-item__icon fa-solid fa-phone"></i>
+                                    0392135496</a>
+                            </li>
+                             <li class="footer-item">
+                                <a href="" class="footer-item__link">
+                                    <i class="footer-item__icon fa-sharp fa-solid fa-location-dot"></i>
+                                    Trường CNTT Thái Nguyên</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="" class="footer-item__link">
+                                    <i class="footer-item__icon fa-solid fa-clock"></i>
+                                    Thứ Hai - Thứ Sáu: 6:00 đến 23:00 và Thứ Bảy - Chủ Nhật: 8:00 đến 22:00</a>
+                            </li>
+                           
+                        </ul>
+                    </div>
+                    <div class="grid__column-4">
+                        <h3 class="footer__heading"> Chăm sóc khách hàng </h3>
+                        <ul class="footer-list">
+                            <li class="footer-item">
+                                <a href="" class="footer-item__link">Phương thức thanh toán</a>
+                            </li>
+                            <li class="footer--item">
+                                <a href="" class="footer-item__link">Chính sách giá</a>
+                            </li>
+                            <li class="footer--item">
+                                <a href="" class="footer-item__link">Chính sách bảo mật</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="grid__column-4">
+                        <h3 class="footer__heading"> Tìm hiểu thêm </h3>
+                        <ul class="footer-list">
+                            <li class="footer--item">
+                                <a href="" class="footer-item__link">Tuyển Dụng</a>
+                            </li>
+                            <li class="footer--item">
+                                <a href="" class="footer-item__link">Tin Tức</a>
+                            </li>
+                            <li class="footer--item">
+                                <a href="" class="footer-item__link">Câu lạc bộ</a>
 
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="grid__column-4">
+                        <h3 class="footer__heading"> Mạng xã hội </h3>
+                        <ul class="footer-list-1">
+                            <li class="footer-item">
+                                <a href="https://www.facebook.com/groups/277995255888654/?ref=share&mibextid=BuDSZP" class="footer--item__link"><i class="footer-item__icon fa-brands fa-facebook"></i></a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="https://instagram.com/thegymtiktok?igshid=NzZlODBkYWE4Ng==" class="footer--item__link"><i class="footer-item__icon fa-brands fa-instagram"></i></a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="UCtVIClVYNH8EAg1h15lNgIQ" class="footer--item__link"><i class="footer-item__icon fa-brands fa-youtube"></i></a>
+
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
+
     </div>
     <script src="./index.js"></script>
 </body>
