--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./css/tu.css">
     <link rel="stylesheet" href="./css/van.css">
     <link rel="stylesheet" href="./css/quyen.css">
-    <title>Document</title>
+    <title>GYMZ - Thể hình giới trẻ</title>
 
 </head>
 
@@ -27,15 +27,22 @@
         <!-- LUU SY TRUONG -->
         <div class="header">
             <div class="header__inner">
-                <div class="header__inner--logo">
+                <div class="header__inner__logo">
                     <h1>GYM<span>Z</span></h1>
                 </div>
                 <!-- Thanh dieu huong -->
-                <ul class="header__inner--navigation">
+                <ul class="header__inner__navigation">
                     <a href="http://facebook.com/lst24" target="_self"><li><home>TRANG CHU</home></li></a>
-                    <a><li><forum>DIEN DAN</forum></li></a>
-                    <a><li><sv>DICH VU</sv></li></a>
-                    <a><li><pro>KHUYEN MAI</pro></li></a>
+                    <a><li href="#"><forum>DIEN DAN</forum></li></a>
+                    <a>
+                        <li href="#"><sv>DICH VU</sv></li>
+                        <ul class="submenu">
+                            <li><a href="#">THE THANH VIEN</a></li>
+                            <li><a href="#">THUE PT</a></li>
+                            <li><a href="#">SHOP WHEY</a></li>
+                        </ul>
+                    </a>
+                    <a><li href="#"><pro>KHUYEN MAI</pro></li></a>
                     <a href="http://facebook.com/lst24" target="_self"><li><try>TAP THU MIEN PHI</try></li></a>
                 </ul>
             </div>
