--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500;600;900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500;600;900&display=swap"rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="./font/fontawesome-free-6.4.0-web/css/all.min.css">
     <link rel="stylesheet" href="./css/base.css">
@@ -32,20 +32,53 @@
                     <h1>GYM<span>Z</span></h1>
                 </div>
                 <!-- Thanh dieu huong -->
-                <ul class="header__inner__navigation">
-                    <a href="http://facebook.com/lst24" target="_self"><li><home>TRANG CHU</home></li></a>
-                    <a><li href="#"><forum>DIEN DAN</forum></li></a>
-                    <a>
-                        <li href="#"><sv>DICH VU</sv></li>
-                        <ul class="submenu">
-                            <li><a href="#">THE THANH VIEN</a></li>
-                            <li><a href="#">THUE PT</a></li>
-                            <li><a href="#">SHOP WHEY</a></li>
+                <div class="header__inner__navigation">
+                    <ul>
+                        <li><a href="#">TRANG CHỦ</a></li>
+                        <li><a href="#">DIỄN ĐÀN</a></li>
+                        <li>
+                            <div class="dropdown">
+                                <a href="#">DỊCH VỤ </a>
+                                <div class="containt">
+                                    <a href="#">THẺ HỘI VIÊN</a>
+                                    <a href="#">HUẤN LUYỆN VIÊN</a>
+                                    <a href="#">CỬA HÀNG WHEY</a>
+                              </div>
+                            </div>
+                        </li>
+                        <li><a href="#">KHUYẾN MÃI</a></li>
+                    </ul>
+                </div>
+                <div class="header__inner__try">
+                    <ul>
+                        <li><a href="#">TẬP THỬ MIỄN PHÍ</a></li>
+                    </ul>
+                </div>
+                <div class="header__inner__menu">
+                    <a href="#">MENU</a>
+                    <div class="header__inner__navigation2">
+                        <ul>
+                            <li><a href="#">TRANG CHỦ</a></li>
+                            <li><a href="#">DIỄN ĐÀN</a></li>
+                            <li>
+                                <div class="dropdown2">
+                                    <a href="#">DỊCH VỤ </a>
+                                    <div class="containt2">
+                                        <a href="#">THẺ HỘI VIÊN</a>
+                                        <a href="#">HUẤN LUYỆN VIÊN</a>
+                                        <a href="#">CỬA HÀNG WHEY</a>
+                                  </div>
+                                </div>
+                            </li>
+                            <li><a href="#">KHUYẾN MÃI</a></li>
                         </ul>
-                    </a>
-                    <a><li href="#"><pro>KHUYEN MAI</pro></li></a>
-                    <a href="http://facebook.com/lst24" target="_self"><li><try>TAP THU MIEN PHI</try></li></a>
-                </ul>
+                        <div class="header__inner__try2">
+                            <ul>
+                                <li><a href="#">TẬP THỬ MIỄN PHÍ</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="container">
