--- a/index.html
+++ b/index.html
@@ -64,33 +64,34 @@
         <div class="container">
             <!-- NGO GIA QUYEN -->
             <div class="container__home">
-                <img class="container__home__person" src="./img/person_cut.png" alt="">
-                <ul class="container__home__icon__list">
-                    <li class="container__home__icon__item">
-                        <a href="#" class="container__home__icon__item__link">
-                            <i class="fa-solid fa-heart"></i>
-                        </a>
-                        <span class="container__home__icon__item__text">
-                            CLOSE-AIGYM dùng toàn bộ nỗ lực để giúp bạn yêu cơ thể mình hơn, đều đặn mỗi ngày
-                        </span>
-                    </li>
-                    <li class="container__home__icon__item">
-                        <a href="#" class="container__home__icon__item__link">
-                            <i class="fa-solid fa-dumbbell"></i>
-                        </a>
-                        <span class="container__home__icon__item__text">
-                            CLOSE-AIGYM dùng toàn bộ nỗ lực để giúp bạn yêu cơ thể mình hơn, đều đặn mỗi ngày
-                        </span>
-                    </li>
-                    <li class="container__home__icon__item">
-                        <a href="#" class="container__home__icon__item__link">
-                            <i class="fa-solid fa-shop"></i>
-                        </a>
-                        <span class="container__home__icon__item__text">
-                            CLOSE-AIGYM dùng toàn bộ nỗ lực để giúp bạn yêu cơ thể mình hơn, đều đặn mỗi ngày
-                        </span>
-                    </li>
-                </ul>
+                <div class="home__about">
+                    <ul class="home__about__list">
+                        <li class="home__about__list__item">
+                            <a href="#" class="home__about__icon__link">
+                                <i class="fa-solid fa-heart"></i>
+                            </a>
+                            <span class="home__about__icon__text">
+                                CLOSE-AIGYM dùng toàn bộ nỗ lực để giúp bạn yêu cơ thể mình hơn, đều đặn mỗi ngày
+                            </span>
+                        </li>
+                        <li class="home__about__list__item">
+                            <a href="#" class="home__about__icon__link">
+                                <i class="fa-solid fa-dumbbell"></i>
+                            </a>
+                            <span class="home__about__icon__text">
+                                Đạt được mục tiêu sau 2 tháng
+                            </span>
+                        </li>
+                        <li class="home__about__list__item">
+                            <a href="#" class="home__about__icon__link">
+                                <i class="fa-solid fa-phone"></i>
+                            </a>
+                            <span class="home__about__icon__text">
+                                Hỗ trợ tư vấn 24/7
+                            </span>
+                        </li>
+                    </ul>
+                </div>
             </div>
             <!-- HOANG ANH TU -->
             <div class="container__service">
