--- a/index.html
+++ b/index.html
@@ -103,24 +103,24 @@
                 </div>
                 <div class="container__service--img">
                     <div class="items container__service--img1">
-                        <img src="https://citigym.com.vn/storage/uploads/vietdh/kickfit.jpg" alt="whey">
-                        <p>Đây là thực phẩm bổ sung Protein cho người tập Gym chất lượng cao nhất, chứa tất cả các loại axit amin cần thiết, quan trọng, giúp cơ thể hấp thu nguồn đạm nhanh nhất để phục hồi và xây dựng cơ bắp tối ưu nhất</p>
+                        <img src="https://citigym.com.vn/storage/uploads/vietdh/gia-mb-375x440.jpg" alt="">
+                        <p>Tập luyện với Huấn luyện viên cá nhân, hiệu quả nhân ba</p>
                     </div>
                     <div class="items container__service--img2">
-                        <img src="https://www.wheystore.vn/upload/news_optimize/wst_1605060580_top_7_thuc_pham_bo_sung_can_thiet_cho_nguoi_tap_gym_image_1605060580_2.jpg" alt="BCAA">
-                        <p>BCAA là một chuỗi các axit amin phân nhánh tốt cho cơ bắp mà cơ thể không thể tự tổng hợp được là: leucine, isoleucine và valine</p>
+                        <img src="https://citigym.com.vn/storage/uploads/thumbnail-3-2-375x440.jpg">
+                        <p>Cơ hội trải nghiệm 40 bộ môn yoga cơ bản, nâng cao tại GYMZ</p>
                     </div>
                     <div class="items container__service--img3">
-                        <img src="https://www.wheystore.vn/upload/news_optimize/wst_1605060580_top_7_thuc_pham_bo_sung_can_thiet_cho_nguoi_tap_gym_image_1605060581_5.jpg" alt="Vitamin khoang chat">  
-                        <p>Vitamin khoáng chất là những hợp chất hữu cơ có phân tử thấp có vai trò rất quan trọng trong cơ thể đặc biệt là đối với những người tập Gym khi muốn cơ bắp phát triển.</p>
+                        <img src="https://citigym.com.vn/storage/uploads/rin-1822-375x440.jpg" alt="">  
+                            <p>Giải tỏa căng thẳng với hơn 10 thể loại Group đa dạng</p>
                     </div>
                     <div class="items container__service--img4">
-                        <img src="https://www.wheystore.vn/upload/news_optimize/wst_1605060580_top_7_thuc_pham_bo_sung_can_thiet_cho_nguoi_tap_gym_image_1605060581_6.jpg" alt="sữa tăng cân">  
-                        <p>Sữa tăng cân, Mass tăng cân hay sữa bột tăng cân là thực phẩm có hàm lượng calo cao hơn một số sản phẩm sữa thông thường khác.</p>
+                        <img src="https://citigym.com.vn/storage/uploads/thumbnail-1-5.jpg" alt="">
+                        <p>Cùng nhau đạp xe để nâng cao sức khỏe</p>
                     </div>
                     <div class="items container__service--img5">
-                        <img src="https://www.wheystore.vn/upload/news_optimize/wst_1605060580_top_7_thuc_pham_bo_sung_can_thiet_cho_nguoi_tap_gym_image_1605060581_7.jpg" alt="bữa ăn thay thế">  
-                        <p>Meal Replacement - bữa ăn thay thế là 1 khái niệm không hề mới. Dạng thực phẩm bổ sung này cực tốt và phù hợp cho dân Gymer.</p>
+                        <img src="https://citigym.com.vn/storage/uploads/untitled-8-3.jpg" alt="">
+                        <p>Có những dạng Dance như: Zumba, Sexy Dance </p>
                     </div>
                 </div>
             </div>
