--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./css/tu.css">
     <link rel="stylesheet" href="./css/van.css">
     <link rel="stylesheet" href="./css/quyen.css">
-    <title>GYM.Z</title>
+    <title>GYMZ - Sức khỏe cho cuộc sống</title>
     
 
 </head>
@@ -220,7 +220,7 @@
                             <li class="footer-item">
                                 <a href="" class="footer-item__link">
                                     <i class="footer-item__icon fa-solid fa-clock"></i>
-                                    Thứ Hai - Thứ Sáu: 6:00 đến 23:00 và Thứ Bảy - Chủ Nhật: 8:00 đến 22:00</a>
+                                    Thứ Hai - Thứ Sáu: 6:00 đến 23:00 <br>Thứ Bảy - Chủ Nhật: 8:00 đến 22:00</a>
                             </li>
                            
                         </ul>
