--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             </span>
                         </li>
                         <li class="home__about__list__item">
-                            <a href="#" class="home__about__icon__link">
+                            <a href="./chatbox.html" class="home__about__icon__link">
                                 <i class="fa-solid fa-phone"></i>
                             </a>
                             <span class="home__about__icon__text">
