--- a/chatbox.html
+++ b/chatbox.html
@@ -29,12 +29,12 @@
         <div class="header">
             <div class="header__inner">
                 <div class="header__inner__logo">
-                    <h1>GYM<span>Z</span></h1>
+                    <a href=""><h1>GYM<span>Z</span></h1></a>
                 </div>
                 <!-- Thanh dieu huong -->
                 <div class="header__inner__navigation">
                     <ul>
-                        <li><a href="#">TRANG CHỦ</a></li>
+                        <li><a href="./index.html">TRANG CHỦ</a></li>
                         <li><a href="#">DIỄN ĐÀN</a></li>
                         <li>
                             <div class="dropdown">
