--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
         <div class="header">
             <div class="header__inner">
                 <div class="header__inner__logo">
-                    <h1>GYM<span>Z</span></h1>
+                    <a href=""><h1>GYM<span>Z</span></h1></a>
                 </div>
                 <!-- Thanh dieu huong -->
                 <div class="header__inner__navigation">
                     <ul>
-                        <li><a href="#">TRANG CHỦ</a></li>
+                        <li><a href="index.html"><span>TRANG CHỦ</span></a></li>
                         <li><a href="#">DIỄN ĐÀN</a></li>
                         <li>
                             <div class="dropdown">
@@ -52,7 +52,7 @@
                 </div>
                 <div class="header__inner__try">
                     <ul>
-                        <li><a href="#">TẬP THỬ MIỄN PHÍ</a></li>
+                        <li><a href="https://facebook.com/lst24">TẬP THỬ MIỄN PHÍ</a></li>
                     </ul>
                 </div>
                 <div class="header__inner__menu">
