--- a/chatbox.html
+++ b/chatbox.html
@@ -8,8 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500;600;900&display=swap"rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500;600;900&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="./font/fontawesome-free-6.4.0-web/css/all.min.css">
     <link rel="stylesheet" href="./css/base.css">
@@ -29,7 +31,9 @@
         <div class="header">
             <div class="header__inner">
                 <div class="header__inner__logo">
-                    <a href=""><h1>GYM<span>Z</span></h1></a>
+                    <a href="">
+                        <h1>GYM<span>Z</span></h1>
+                    </a>
                 </div>
                 <!-- Thanh dieu huong -->
                 <div class="header__inner__navigation">
@@ -43,7 +47,7 @@
                                     <a href="#">THẺ HỘI VIÊN</a>
                                     <a href="#">HUẤN LUYỆN VIÊN</a>
                                     <a href="#">CỬA HÀNG WHEY</a>
-                              </div>
+                                </div>
                             </div>
                         </li>
                         <li><a href="#">KHUYẾN MÃI</a></li>
@@ -67,7 +71,7 @@
                                         <a href="#">THẺ HỘI VIÊN</a>
                                         <a href="#">HUẤN LUYỆN VIÊN</a>
                                         <a href="#">CỬA HÀNG WHEY</a>
-                                  </div>
+                                    </div>
                                 </div>
                             </li>
                             <li><a href="#">KHUYẾN MÃI</a></li>
@@ -86,7 +90,7 @@
                 <div class="chatbox__head">
                     <h1 class="chatbox__head__title">Chatbox</h1>
                     <div class="chatbox__head__active">
-                        <span class="chatbox__head__active__text">Hoạt động</span> 
+                        <span class="chatbox__head__active__text">Hoạt động</span>
                     </div>
                 </div>
                 <div class="chatbox__message">
@@ -110,7 +114,7 @@
                         <i class="fa-regular fa-paper-plane"></i>
                     </div>
                 </div>
-                
+
             </div>
         </div>
 
