--- a/chatbox.html
+++ b/chatbox.html
@@ -37,7 +37,7 @@
                 <div class="header__inner__navigation">
                     <ul>
                         <li><a href="./index.html">TRANG CHỦ</a></li>
-                        <li><a href="/gymz/navigation/forum.html">DIỄN ĐÀN</a></li>
+                        <li><a href="./navigation/forum.html">DIỄN ĐÀN</a></li>
                         <li>
                             <div class="dropdown">
                                 <a href="#"><span>DỊCH VỤ</span><m><i class='bx bxs-right-arrow'></i></m></a>
@@ -45,11 +45,11 @@
                                     <a href="#">THẺ HỘI VIÊN</a>
                                     <a href="#">HUẤN LUYỆN VIÊN</a>
                                     <a href="#">CỬA HÀNG WHEY</a>
-                                    <a href="/gymz/chatbox.html"><span>CHAT ONLINE</span></a>
+                                    <a href="./chatbox.html"><span>CHAT ONLINE</span></a>
                               </div>
                             </div>
                         </li>
-                        <li><a href="/gymz/navigation/promotion.html">KHUYẾN MÃI</a></li>
+                        <li><a href="./navigation/promotion.html">KHUYẾN MÃI</a></li>
                     </ul>
                 </div>
                 <div class="header__inner__try">
