--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 <!-- Thanh dieu huong -->
                 <div class="header__inner__navigation">
                     <ul>
-                        <li><a href="/index.html"><span>TRANG CHỦ</span></a></li>
-                        <li><a href="/navigation/forum.html">DIỄN ĐÀN</a></li>
+                        <li><a href="./index.html"><span>TRANG CHỦ</span></a></li>
+                        <li><a href="./navigation/forum.html">DIỄN ĐÀN</a></li>
                         <li>
                             <div class="dropdown">
                                 <a href="#">DỊCH VỤ<m><i class='bx bxs-right-arrow'></i></m></a>   
@@ -44,12 +44,12 @@
                                     <a href="#">THẺ HỘI VIÊN</a>
                                     <a href="#">HUẤN LUYỆN VIÊN</a>
                                     <a href="#">CỬA HÀNG WHEY</a>
-                                    <a href="/chatbox.html">CHAT ONLINE</a>
-                                    <a href="/navigation/test.html">TEST</a>
+                                    <a href="./chatbox.html">CHAT ONLINE</a>
+                                    <a href="./navigation/test.html">TEST</a>
                               </div>
                             </div>
                         </li>
-                        <li><a href="/navigation/promotion.html">KHUYẾN MÃI</a></li>
+                        <li><a href="./navigation/promotion.html">KHUYẾN MÃI</a></li>
                     </ul>
                 </div>
                 <div class="header__inner__try">
