--- a/navigation/promotion.html
+++ b/navigation/promotion.html
@@ -30,8 +30,8 @@
                 <!-- Thanh dieu huong -->
                 <div class="header__inner__navigation">
                     <ul>
-                        <li><a href="/index.html">TRANG CHỦ</a></li>
-                        <li><a href="/navigation/forum.html">DIỄN ĐÀN</a></li>
+                        <li><a href="../index.html">TRANG CHỦ</a></li>
+                        <li><a href="./forum.html">DIỄN ĐÀN</a></li>
                         <li>
                             <div class="dropdown">
                                 <a href="#">DỊCH VỤ<m><i class='bx bxs-right-arrow'></i></m></a>
@@ -39,11 +39,11 @@
                                     <a href="#">THẺ HỘI VIÊN</a>
                                     <a href="#">HUẤN LUYỆN VIÊN</a>
                                     <a href="#">CỬA HÀNG WHEY</a>
-                                    <a href="/chatbox.html">CHAT ONLINE</a>
+                                    <a href="../chatbox.html">CHAT ONLINE</a>
                               </div>
                             </div>
                         </li>
-                        <li><a href="/navigation/promotion.html"><span>KHUYẾN MÃI</span></a></li>
+                        <li><a href="./promotion.html"><span>KHUYẾN MÃI</span></a></li>
                     </ul>
                 </div>
                 <div class="header__inner__try">
@@ -60,7 +60,7 @@
             <div class="container__inner">
                 <div class="container__inner__ntf">
                     <h1>COMING SOON ..</h1>
-                    <a href="/index.html"><h1><i class='bx bx-home'></i></h1></a>
+                    <a href="../index.html"><h1><i class='bx bx-home'></i></h1></a>
                 </div>
             </div>
         </div>
