--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                                 <div class="containt">
                                     <a href="#">THẺ HỘI VIÊN</a>
                                     <a href="#">HUẤN LUYỆN VIÊN</a>
-                                    <a href="#">CỬA HÀNG WHEY</a>
+                                    <a href="./navigation/shop.html">CỬA HÀNG WHEY</a>
                                     <a href="./chatbox.html">CHAT ONLINE</a>
                                     <a href="./navigation/test.html">TEST</a>
                               </div>
