--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             </div>
 
 
-            <!-- container__shopee -->
+            container__shopee
             <div class="container__sanpham">
                 <h1>SẢN PHẨM GIÚP PHÁT TRIỂN CƠ THỂ</h1>
                 <div class="parent__container">
@@ -402,10 +402,8 @@
                         <h2>Máy chạy bộ điện đa năng HQ-V1C</h2>
                         <h1>₫11.879.555 - ₫17.77.378</h1>
                     </div>
-
                 </div>
             </div>
-
         </div>
 
 
