--- a/navigation/chatbox.html
+++ b/navigation/chatbox.html
@@ -11,16 +11,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500;600;900&display=swap"rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="./font/fontawesome-free-6.4.0-web/css/all.min.css">
+    <link rel="stylesheet" href="../font/fontawesome-free-6.4.0-web/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="./css/base.css">
-    <link rel="stylesheet" href="./css/index.css">
-    <link rel="stylesheet" href="./css/tien.css">
-    <link rel="stylesheet" href="./css/truong.css">
-    <link rel="stylesheet" href="./css/tu.css">
-    <link rel="stylesheet" href="./css/van.css">
-    <link rel="stylesheet" href="./css/quyen.css">
-    <link rel="stylesheet" href="./css/chatbox.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <link rel="stylesheet" href="../css/base.css">
+    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/tien.css">
+    <link rel="stylesheet" href="../css/truong.css">
+    <link rel="stylesheet" href="../css/tu.css">
+    <link rel="stylesheet" href="../css/van.css">
+    <link rel="stylesheet" href="../css/quyen.css">
+    <link rel="stylesheet" href="../navigation_css/chatbox.css">
     <title>GYMZ - Thể hình giới trẻ</title>
 
 </head>
@@ -96,7 +97,7 @@
         </div>
 
     </div>
-    <script src="./index.js"></script>
+    <script src="../navigation_javascript/chatbox.js"></script>
 </body>
 
 </html>
