--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                                     <a href="#">THẺ HỘI VIÊN</a>
                                     <a href="#">HUẤN LUYỆN VIÊN</a>
                                     <a href="./navigation/shop.html">CỬA HÀNG WHEY</a>
-                                    <a href="./chatbox.html">CHAT ONLINE</a>
+                                    <a href="./navigation/chatbox.html">CHAT ONLINE</a>
                                     <a href="./navigation/test.html">TEST</a>
                               </div>
                             </div>
