update howme page

--- a/index.html
+++ b/index.html
@@ -73,32 +73,19 @@
             <!-- NGO GIA QUYEN -->
             <div class="container__home">
                 <div class="home__about">
-                    <ul class="home__about__list">
-                        <li class="home__about__list__item">
-                            <a href="#" class="home__about__icon__link">
-                                <i class="fa-solid fa-heart"></i>
-                            </a>
-                            <span class="home__about__icon__text">
-                                CLOSE-AIGYM dùng toàn bộ nỗ lực để giúp bạn yêu cơ thể mình hơn, đều đặn mỗi ngày
-                            </span>
-                        </li>
-                        <li class="home__about__list__item">
-                            <a href="#" class="home__about__icon__link">
-                                <i class="fa-solid fa-dumbbell"></i>
-                            </a>
-                            <span class="home__about__icon__text">
-                                Đạt được mục tiêu sau 2 tháng
-                            </span>
-                        </li>
-                        <li class="home__about__list__item">
-                            <a href="./navigation/chatbox.html" class="home__about__icon__link">
-                                <i class="fa-solid fa-phone"></i>
-                            </a>
-                            <span class="home__about__icon__text">
-                                Hỗ trợ tư vấn 24/7
-                            </span>
-                        </li>
-                    </ul>
+                    <div class="home__about__head">
+                        <p class="home__about__head__text">FIND YOUR ENERGY</p>
+                    </div>
+                    <h1 class="home__about__title">
+                        MAKE YOUR BODY HEALTHY & FIT
+                    </h1>
+                    <p class="home__about__text">
+                        Gymhen an unknown printer took a galley of type and scrambled.It has survived nknown printercenturies.
+                    </p>
+                    <div class="home__about__btn">
+                        <button class="home__about__btn__child">CALL NOW</button>
+                    </div>
+
                 </div>
             </div>
             <!-- HOANG ANH TU -->
