--- a/navigation/chatbox.html
+++ b/navigation/chatbox.html
@@ -82,9 +82,11 @@
                 </div>
                 <div class="chatbox__bottom">
                     <div class="chatbox__bottom__link-social">
-                        <div class="chatbox__bottom__link-social__zalo">
-                            <i class="fa-brands fa-facebook-messenger"></i>
-                            <span>chat messenger</span>
+                        <div class="chatbox__bottom__link-social__mess">
+                            <a href="https://www.messenger.com/t/172967089240726/" class="chatbox__bottom__link-social__mess">
+                                <i class="fa-brands fa-facebook-messenger"></i>
+                                <span>chat messenger</span>
+                            </a>
                         </div>
                     </div>
                     <div class="chatbox__bottom__input">
