--- a/navigation/forum.html
+++ b/navigation/forum.html
@@ -8,8 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500;600;900&display=swap"rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500;600;900&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="./font/fontawesome-free-6.4.0-web/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -25,7 +27,9 @@
         <div class="header">
             <div class="header__inner">
                 <div class="header__inner__logo">
-                    <a href=""><h1>GYM<span>Z</span></h1></a>
+                    <a href="">
+                        <h1>GYM<span>Z</span></h1>
+                    </a>
                 </div>
                 <!-- Thanh dieu huong -->
                 <div class="header__inner__navigation">
@@ -40,7 +44,7 @@
                                     <a href="#">HUẤN LUYỆN VIÊN</a>
                                     <a href="#">CỬA HÀNG WHEY</a>
                                     <a href="../chatbox.html">CHAT ONLINE</a>
-                              </div>
+                                </div>
                             </div>
                         </li>
                         <li><a href="./promotion.html">KHUYẾN MÃI</a></li>
@@ -52,7 +56,7 @@
                     </ul>
                 </div>
                 <div class="header__inner__menu">
-                    <a href="#">MENU</a>
+                    <a href="#"><m><i class='bx bx-menu' ></i></m></a>
                 </div>
             </div>
         </div>
@@ -60,7 +64,9 @@
             <div class="container__inner">
                 <div class="container__inner__ntf">
                     <h1>COMING SOON ..</h1>
-                    <a href="../index.html"><h1><i class='bx bx-home'></i></h1></a>
+                    <a href="../index.html">
+                        <h1><i class='bx bx-home'></i></h1>
+                    </a>
                 </div>
             </div>
         </div>
