--- a/navigation/promotion.html
+++ b/navigation/promotion.html
@@ -52,7 +52,7 @@
                     </ul>
                 </div>
                 <div class="header__inner__menu">
-                    <a href="#">MENU</a>
+                    <a href="#"><m><i class='bx bx-menu' ></i></m></a>
                 </div>
             </div>
         </div>
