--- a/index.html
+++ b/index.html
@@ -39,21 +39,21 @@
                 <!-- Thanh dieu huong -->
                 <div class="header__inner__navigation">
                     <ul>
-                        <li><a href="index.html"><span>TRANG CHỦ</span></a></li>
-                        <li><a href="#">DIỄN ĐÀN</a></li>
+                        <li><a href="./index.html"><span>TRANG CHỦ</span></a></li>
+                        <li><a href="./navigation/forum.html">DIỄN ĐÀN</a></li>
                         <li>
                             <div class="dropdown">
-                                <a href="#">DỊCH VỤ<i class='bx bxs-right-arrow'></i></a>
+                                <a href="#">DỊCH VỤ<m><i class='bx bxs-right-arrow'></i></m></a>
                                 <div class="containt">
                                     <a href="#">THẺ HỘI VIÊN</a>
                                     <a href="#">HUẤN LUYỆN VIÊN</a>
                                     <a href="./navigation/shop.html">CỬA HÀNG WHEY</a>
                                     <a href="./chatbox.html">CHAT ONLINE</a>
                                     <a href="./navigation/test.html">TEST</a>
-                              </div>
+                                </div>
                             </div>
                         </li>
-                        <li><a href="#">KHUYẾN MÃI</a></li>
+                        <li><a href="./navigation/promotion.html">KHUYẾN MÃI</a></li>
                     </ul>
                 </div>
                 <div class="header__inner__try">
@@ -62,7 +62,7 @@
                     </ul>
                 </div>
                 <div class="header__inner__menu">
-                    <a href="#">MENU</a>
+                    <a href="#"><m><i class='bx bx-menu' ></i></m></a>
                 </div>
             </div>
         </div>
