--- a/navigation/chatbox.html
+++ b/navigation/chatbox.html
@@ -37,8 +37,8 @@
                 <!-- Thanh dieu huong -->
                 <div class="header__inner__navigation">
                     <ul>
-                        <li><a href="./index.html">TRANG CHỦ</a></li>
-                        <li><a href="./navigation/forum.html">DIỄN ĐÀN</a></li>
+                        <li><a href="../index.html">TRANG CHỦ</a></li>
+                        <li><a href="./forum.html">DIỄN ĐÀN</a></li>
                         <li>
                             <div class="dropdown">
                                 <a href="#"><span>DỊCH VỤ</span><m><i class='bx bxs-right-arrow'></i></m></a>
@@ -50,7 +50,7 @@
                               </div>
                             </div>
                         </li>
-                        <li><a href="./navigation/promotion.html">KHUYẾN MÃI</a></li>
+                        <li><a href="./promotion.html">KHUYẾN MÃI</a></li>
                     </ul>
                 </div>
                 <div class="header__inner__try">
