edit promotion, ... more

--- a/navigation/shop.html
+++ b/navigation/shop.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="../css/truong.css">
     <link rel="stylesheet" href="../css/base.css">
     <link rel="stylesheet" href="../navigation_css/shop.css">
-    <link rel="stylesheet" href="End_shoprtien.css">
+    <link rel="stylesheet" href="../navigation_css/End_shoprtien.css">
     <title>GYMZ - Thể hình giới trẻ</title>
 
 </head>
