--- a/navigation/promotion.html
+++ b/navigation/promotion.html
@@ -102,7 +102,7 @@
                         </div>
                         <div class="about__website">
                             <a href="#">
-                                <m><i class='bx bx-world'></i></m> Website: pwm.io.vn
+                                <m><i class='bx bx-world'></i></m> Website: https://pwm.io.vn
                             </a>
                         </div>
     
@@ -134,7 +134,11 @@
             </div>
         </div>
         <div class="footer__last">
-                
+                <div class="footer__last__select">
+                    <a href="#">
+                        <m><i class='bx bxs-copyright'></i></m> 2023 Allrights reserved pwm.io.vn
+                    </a>
+                </div>
         </div>
     </div>
     <script src="./index.js"></script>
