add menu, and edit very lor

--- a/index.html
+++ b/index.html
@@ -63,7 +63,18 @@
                     </ul>
                 </div>
                 <div class="header__inner__menu">
-                    <a href="#"><m><i class='bx bx-menu' ></i></m></a>
+                    <div class="menuroi">
+                        <a href="#">
+                            <i class='bx bx-menu' ></i>
+                        </a>
+                        <div class="noidung">
+                            <a href="./index.html">TRANG CHỦ</a>
+                            <a href="./navigation/forum.html">DIỄN ĐÀN</a>
+                            <a href="#">DỊCH VỤ</a>
+                            <a href="./navigation/promotion.html">KHUYẾN MÃI</a>
+                            <a href="#">TẬP THỬ MIỄN PHÍ</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
