--- a/index.html
+++ b/index.html
@@ -318,6 +318,7 @@
 
     </div>
     <script src="./index.js"></script>
+    <script src="./navigation_javascript/menu.js"></script>
 </body>
 
 </html>
