--- a/navigation/chatbox.html
+++ b/navigation/chatbox.html
@@ -111,6 +111,7 @@
 
     </div>
     <script src="../navigation_javascript/chatbox.js"></script>
+    <script src="../navigation_javascript/menu.js"></script>
 </body>
 
 </html>
