--- a/navigation/promotion.html
+++ b/navigation/promotion.html
@@ -57,6 +57,10 @@
                             <i class='bx bx-menu' ></i>
                         </a>
                         <div class="noidung">
+                            <div class="logo">
+                                <!-- <a href="">GYM<span>Z</span></a> -->
+                                <img src="../img/background/logo_and_bgr.png" alt="logo and bgr">
+                            </div>
                             <a href="../index.html">TRANG CHỦ</a>
                             <a href="./forum.html">DIỄN ĐÀN</a>
                             <a href="#">DỊCH VỤ</a>
@@ -192,6 +196,7 @@
         </div>
     </div>
     <script src="./index.js"></script>
+    <script src="../navigation_javascript/menu.js"></script>
 </body>
 
 </html>
