--- a/navigation/forum.html
+++ b/navigation/forum.html
@@ -86,6 +86,7 @@
         </div>
     </div>
     <script src="./index.js"></script>
+    <script src="../navigation_javascript/menu.js"></script>
 </body>
 
 </html>
