--- a/navigation/shop.html
+++ b/navigation/shop.html
@@ -289,6 +289,7 @@
         
     </div>
     <script src="./index.js"></script>
+    <script src="../navigation_javascript/menu.js"></script>
 </body>
 
 </html>
