--- a/navigation/chatbox.html
+++ b/navigation/chatbox.html
@@ -59,18 +59,7 @@
                     </ul>
                 </div>
                 <div class="header__inner__menu">
-                    <div class="menuroi">
-                        <a href="#">
-                            <i class='bx bx-menu' ></i>
-                        </a>
-                        <div class="noidung">
-                            <a href="../index.html">TRANG CHỦ</a>
-                            <a href="./forum.html">DIỄN ĐÀN</a>
-                            <a href="#">DỊCH VỤ</a>
-                            <a href="./promotion.html">KHUYẾN MÃI</a>
-                            <a href="#">TẬP THỬ MIỄN PHÍ</a>
-                        </div>
-                    </div>
+                    <a href="#"><m><i class='bx bx-menu' ></i></m></a>
                 </div>
             </div>
         </div>
