--- a/navigation/shop.html
+++ b/navigation/shop.html
@@ -38,14 +38,14 @@
                 <div class="header__inner__navigation">
                     <ul>
                         <li><a href="../index.html">TRANG CHỦ</a></li>
-                        <li><a href="./forum.html">DIỄN ĐÀN</a></li>
+                        <li><a href="./forum.html"><span>DIỄN ĐÀN</span></a></li>
                         <li>
                             <div class="dropdown">
-                                <a href="#"><span>DỊCH VỤ</span><m><i class='bx bxs-right-arrow'></i></m></a>
+                                <a href="#">DỊCH VỤ<m><i class='bx bxs-right-arrow'></i></m></a>
                                 <div class="containt">
                                     <a href="#">THẺ HỘI VIÊN</a>
                                     <a href="#">HUẤN LUYỆN VIÊN</a>
-                                    <a href="#"><span>CỬA HÀNG WHEY</span></a>
+                                    <a href="#">CỬA HÀNG WHEY</a>
                                     <a href="../chatbox.html">CHAT ONLINE</a>
                                 </div>
                             </div>
@@ -59,18 +59,7 @@
                     </ul>
                 </div>
                 <div class="header__inner__menu">
-                    <div class="menuroi">
-                        <a href="#">
-                            <i class='bx bx-menu' ></i>
-                        </a>
-                        <div class="noidung">
-                            <a href="../index.html">TRANG CHỦ</a>
-                            <a href="./forum.html">DIỄN ĐÀN</a>
-                            <a href="#">DỊCH VỤ</a>
-                            <a href="./promotion.html">KHUYẾN MÃI</a>
-                            <a href="#">TẬP THỬ MIỄN PHÍ</a>
-                        </div>
-                    </div>
+                    <a href="#"><m><i class='bx bx-menu' ></i></m></a>
                 </div>
             </div>
         </div>
