--- a/navigation/promotion.html
+++ b/navigation/promotion.html
@@ -58,8 +58,8 @@
                         </a>
                         <div class="noidung">
                             <div class="logo">
-                                <!-- <a href="">GYM<span>Z</span></a> -->
-                                <img src="../img/background/logo_and_bgr.png" alt="logo and bgr">
+                                <a href="">GYM<span>Z</span></a>
+                                <!-- <img src="../img/background/logo_and_bgr.png" alt="logo and bgr"> -->
                             </div>
                             <a href="../index.html">TRANG CHỦ</a>
                             <a href="./forum.html">DIỄN ĐÀN</a>
@@ -67,6 +67,7 @@
                             <a href="./promotion.html">KHUYẾN MÃI</a>
                             <a href="#">TẬP THỬ MIỄN PHÍ</a>
                         </div>
+                        
                     </div>
                 </div>
             </div>
@@ -194,7 +195,9 @@
                     </div>
                 </div>
         </div>
-    </div>
+    </div> 
+    <!-- overlay -->
+    <div class="nen_mo"></div>
     <script src="./index.js"></script>
     <script src="../navigation_javascript/menu.js"></script>
 </body>
